# bo4e_migration_framework

./: .pre-commit-config.yaml  README.md  domain-specific-terms.txt  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: black.yml  codeql-analysis.yml  coverage.yml  packaging_test.yml  python-publish.yml  pythonlint.yml  unittests.yml
dev_requirements/: requirements-coverage.txt  requirements-formatting.in  requirements-formatting.txt  requirements-linting.txt  requirements-test_packaging.txt  requirements-tests.in  requirements-tests.txt  requirements-type_check.in  requirements-type_check.txt
src/: _your_package_version.py  config.py
src/bomf/: __init__.py  config.py
src/bomf/filter/: __init__.py  sourcedataproviderfilter.py
src/bomf/loader/: __init__.py  entityloader.py
src/bomf/logging/: __init__.py
src/bomf/mapper/: __init__.py
src/bomf/model/: __init__.py
src/bomf/provider/: __init__.py
src/bomf/validation/: __init__.py  core.py  path_map.py  query_map.py  utils.py
src/bomf/validation/core/: __init__.py  analysis.py  errors.py  execution.py  types.py  utils.py  validator.py
src/bomf/validation/core2/: analysis.py  errors.py  execution.py  utils.py  validator.py
unittests/: conftest.py  example_source_data.json  models.py  test_bo4e_data_set.py  test_chained_source_data_providers.py  test_entity_loader.py  test_filter.py  test_list_conversion.py  test_mapper.py  test_migration.py  test_source_data_provider.py  test_validation.py
