# The content of this file is only necessary for python packages
[metadata]
name = bomf
author = Hochfrequenz Unternehmensberatung GmbH
author_email = info@hochfrequenz.de
description = BO4E Migration Framework
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/Hochfrequenz/bo4e_migration_framework
project_urls =
    Documentation = https://github.com/Hochfrequenz/bo4e_migration_framework
    Code = https://github.com/Hochfrequenz/bo4e_migration_framework
    Bug tracker = https://github.com/Hochfrequenz/bo4e_migration_framework/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
license = mit
platforms = any

[options]
# create a src package in the root directory and create there a folder with the name of your package
# into this folder you put your python files
package_dir =
    = src
packages = find:
zip_safe = False
include_package_data = True
python_requires = >=3.10
install_requires =
    attrs
# write here line by line the dependencies for your package

[options.packages.find]
where = src
exclude =
    unittests

[options.package_data]
* = py.typed
